<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <RelativeLayout
        android:id="@+id/relLayMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavViewBar"
        android:layout_below="@id/toolbar"
        android:background="@drawable/backgroundmain">


        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/tv_main_workout_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="5dp"
                android:text="@string/sum"
                android:textAlignment="center"
                android:textSize="37sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/workouts_in_total"
                android:textAlignment="center"
                android:textSize="33sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/tv_main_last_workout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="5dp"
                android:text="@string/last_workout"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/was_your_last_workout_group"
                android:textAlignment="center"
                android:textSize="23sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="300dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/tv_main_total_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="5dp"
                android:text="@string/sum"
                android:textAlignment="center"
                android:textSize="37sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/exercises_in_total"
                android:textAlignment="center"
                android:textSize="33sp" />
        </RelativeLayout>

    </RelativeLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavViewBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/white_grey_border_bottom"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>